apps/sample-web/deployment.yaml
# Latihan 1: Namespace + Deployment + Service
apiVersion: v1
kind: Namespace
metadata:
  name: belajar
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: belajar
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: nginx
          image: nginx:1.27-alpine
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: belajar
spec:
  selector:
    app: web
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
